# custom-mappings-example

./: .gitattributes  .gitignore  README.md  mappings.json5  pixi.toml
custom_mapping/: CMakeLists.txt  package.xml
custom_mapping/msg/: BoundingBoxes2D.msg  BoundingBoxes3D.msg  Detection.msg  Detections.msg  Detections2D.msg  ForceVector.msg  GpsReading.msg  MotorStatus.msg  RigidBodies.msg  RigidBody.msg
custom_mapping/src/: publisher.cpp
custom_mappings/: CMakeLists.txt  package.xml
custom_mappings/msg/: BoundingBox2D.msg  BoundingBox3D.msg  BoundingBoxes2D.msg  BoundingBoxes3D.msg  Detections.msg  Detections2D.msg  ForceVector.msg  GpsReading.msg  RigidBodies.msg
custom_mappings/src/: publisher.cpp
