<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_mappings</name>
  <version>0.1.0</version>
  <description>Custom messages and publisher for testing rewire dynamic mappings</description>
  <maintainer email="alvgaona@gmail.com">Alvaro J. Gaona</maintainer>
  <url type="website">https://github.com/rewire-run/rewire-custom-mappings-example</url>
  <url type="repository">https://github.com/rewire-run/rewire-custom-mappings-example</url>
  <license>MIT</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
